# crucible

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: cli.py
src/core/: registry.py  runner.py  sandbox.py  types.py
src/evaluators/: go_eval.py  quality_eval.py  safety_eval.py
suites/: go_basic.yaml
suites/data/: go_basic.jsonl
tests/: conftest.py  test_go_eval.py  test_quality_eval.py  test_registry.py  test_report.py  test_runner.py  test_safety_eval.py
